--- a/imcCalculado.html
+++ b/imcCalculado.html
@@ -11,8 +11,7 @@
 
     function calculaImc(altura, peso) {
 
-        return peso / (altura * altura);
-
+        var imc = peso / (altura * altura);
     }
 
     var imcCalculado = calculaImc(1.77, 75);
